apps/coder-prod/namespace-coder-workspace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: coder-workspace
  labels:
    name: coder-workspace
    app.kubernetes.io/name: coder-workspace
    app.kubernetes.io/part-of: coder
