apps/coder-prod/namespace-coder.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: coder
  labels:
    name: coder
