apps/coder-prod/namespace-flux-system.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flux-system
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
