apps/coder-prod/service-registry.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: coder
  labels:
    app: registry
    app.kubernetes.io/name: registry
    app.kubernetes.io/part-of: coder
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app: registry
